fix overflow

--- a/style.css
+++ b/style.css
@@ -352,9 +352,7 @@ input[type='submit']:hover, button:hover {
 #section-1 {
     height: 100vh;
     width: 100%;
-    position: relative;
 	overflow-x: hidden;
-	overflow-y: visible;
 }
 
 #profile {
@@ -526,9 +524,7 @@ left: 70vw;
 #section-3 {
     height: 110vh;
     text-align: center;
-	position: relative;
 	overflow-x: hidden;
-	overflow-y: visible;
 }
 .keyword {
     display: inline-block;
